--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-cssjanus": "~0.2.3",
     "grunt-exec": "~0.4.6",
     "grunt-jsvalidate": "~0.2.2",
     "grunt-legacy-util": "^0.2.0",
     "grunt-patch-wordpress": "~0.3.0",
+    "grunt-rtlcss": "~1.6.0",
     "grunt-sass": "~1.0.0",
     "grunt-wp-i18n": "~0.5.2",
     "matchdep": "~0.3.0"
