--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
   allow_failures:
     - php: 7.0
     - php: hhvm
-  fast_finish: true
+#  fast_finish: true
 
 # before_install: Failures in this section will result in build status 'errored'
 before_install:
