--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,19 @@ matrix:
       env: WP_VERSION=master
     - php: hhvm
       env: WP_VERSION=master
+  exclude:
+    - php: 7.0
+      env: WP_VERSION=4.2
+    - php: 7.0
+      env: WP_VERSION=4.1
+    - php: 7.0
+      env: WP_VERSION=4.0
+    - php: 7.0
+      env: WP_VERSION=3.9
+    - php: 7.0
+      env: WP_VERSION=3.8
+    - php: 7.0
+      env: WP_VERSION=3.7
   allow_failures:
     - php: nightly
     - php: hhvm
