Build Tools: Add minimum NodeJS 4.2.x LTS version
This changeset sets the minimum required NodeJS version supported. This is required as various NPM modules now require a minimum version greater than the default v0.10.x currently in use.

See #2920.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "grunt-wp-i18n": "~0.5.2",
     "matchdep": "~1.0.1"
   },
+  "engines": {
+    "node": ">=4.2.1"
+  },
   "keywords": [
     "community",
     "forums",
