--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ php:
 # WordPress comes from the Git mirror, where 'master' mirrors svn 'trunk' and
 # x.y mirrors the latest from the x.y branch
 env:
+    - TRAVIS_NODE_VERSION="4"
     - WP_VERSION=master
     - WP_VERSION=4.4
     - WP_VERSION=4.3
