--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,12 @@ before_install:
     - mysql -e 'CREATE DATABASE wordpress_test;' -uroot
     # prepare for running the tests
     - cd $plugin_dir
+    # setup NodeJS version using NVM
+    - node --version
+    - nvm install 4
+    - node --version
     - npm install -g grunt-cli
+    - npm --version
 
 # before_script: Failures in this section will result in build status 'failed'
 before_script:
