--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "description": "Forum software with a twist from the creators of WordPress.",
   "devDependencies": {
+    "autoprefixer": "~6.3.3",
     "grunt": "~0.4.5",
     "grunt-check-dependencies": "~0.12.0",
     "grunt-checktextdomain": "~1.0.0",
@@ -18,6 +19,7 @@
     "grunt-jsvalidate": "~0.2.2",
     "grunt-legacy-util": "^0.2.0",
     "grunt-patch-wordpress": "~0.3.0",
+    "grunt-postcss": "~0.8.0",
     "grunt-rtlcss": "~2.0.1",
     "grunt-sass": "~1.1.0",
     "grunt-wp-i18n": "~0.5.2",
