--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "grunt-rtlcss": "~2.0.1",
     "grunt-sass": "~1.1.0",
     "grunt-wp-i18n": "~0.5.2",
-    "matchdep": "~1.0.1"
+    "matchdep": "~1.0.1",
+    "postcss-reporter": "~1.3.3",
+    "stylelint": "~5.2.1"
   },
   "engines": {
     "node": ">=4.2.1"
