--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-wp-i18n": "~0.5.2",
     "matchdep": "~1.0.1",
     "postcss-reporter": "~1.3.3",
+    "postcss-scss": "~0.1.7",
     "stylelint": "~5.2.1"
   },
   "engines": {
