Build Tools: Update `grunt-legacy-util` from 0.2.0 to 1.0.0
See also: https://github.com/gruntjs/grunt-legacy-util/compare/v0.2.0...v1.0.0

See #2918

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "grunt-contrib-watch": "~1.0.0",
     "grunt-exec": "~0.4.6",
     "grunt-jsvalidate": "~0.2.2",
-    "grunt-legacy-util": "^0.2.0",
+    "grunt-legacy-util": "~1.0.0",
     "grunt-patch-wordpress": "~0.3.0",
     "grunt-postcss": "~0.8.0",
     "grunt-rtlcss": "~2.0.1",
