--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -27,4 +27,9 @@
 			</arguments>
 		</listener>
 	</listeners>
+	<filter>
+		<whitelist processUncoveredFilesFromWhitelist="true">
+			<directory suffix=".php">src</directory>
+		</whitelist>
+	</filter>
 </phpunit>
