--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,6 +4,8 @@
     except: ["blockless-group"],
     ignore: ["after-comment"],
   } ],
+  "at-rule-name-case": "lower",
+  "at-rule-name-space-after": "always-single-line",
   "at-rule-semicolon-newline-after": "always",
   "block-closing-brace-newline-after": "always",
   "block-closing-brace-newline-before": "always",
@@ -15,6 +17,9 @@
   "color-no-invalid-hex": true,
   "declaration-bang-space-after": "never",
   "declaration-bang-space-before": "always",
+  "declaration-block-no-duplicate-properties": [ true, {
+    ignore: ["consecutive-duplicates"],
+  } ],
   "declaration-block-no-shorthand-property-overrides": true,
   "declaration-block-semicolon-newline-after": "always",
   "declaration-block-semicolon-space-before": "never",
@@ -27,10 +32,13 @@
   "function-comma-space-after": "always",
   "function-comma-space-before": "never",
   "function-linear-gradient-no-nonstandard-direction": true,
+  "function-max-empty-lines": 1,
+  "function-name-case": "lower",
   "function-parentheses-space-inside": "never",
   "function-url-quotes": "none",
   "function-whitespace-after": "always",
   "indentation": "tab",
+  "keyframe-declaration-no-important": true,
   "max-empty-lines": 2,
   "media-feature-colon-space-after": "always",
   "media-feature-colon-space-before": "never",
@@ -41,25 +49,40 @@
   "media-query-list-comma-space-after": "always-single-line",
   "media-query-list-comma-space-before": "never",
   "no-eol-whitespace": true,
+  "no-extra-semicolons": true,
   "no-invalid-double-slash-comments": true,
   "no-missing-eof-newline": true,
   "number-leading-zero": "always",
   "number-no-trailing-zeros": true,
   "number-zero-length-no-unit": true,
+  "property-case": "lower",
   "rule-nested-empty-line-before": [ "always", {
     ignore: ["after-comment"],
   } ],
   "rule-non-nested-empty-line-before": [ "always", {
     ignore: ["after-comment"],
   } ],
+  "selector-attribute-brackets-space-inside": "never",
+  "selector-attribute-operator-space-after": "never",
+  "selector-attribute-operator-space-before": "never",
   "selector-combinator-space-after": "always",
   "selector-combinator-space-before": "always",
   "selector-list-comma-newline-after": "always",
   "selector-list-comma-space-before": "never",
+  "selector-max-empty-lines": 0,
+  "selector-pseudo-class-case": "lower",
+  "selector-pseudo-class-no-unknown": true,
+  "selector-pseudo-class-parentheses-space-inside": "never",
+  "selector-pseudo-element-case": "lower",
   "selector-pseudo-element-colon-notation": "single",
+  "selector-pseudo-element-no-unknown": true,
   "selector-type-case": "lower",
+  "selector-type-no-unknown": true,
+  "shorthand-property-no-redundant-values": true,
   "string-no-newline": true,
   "string-quotes": "double",
+  "unit-case": "lower",
+  "unit-no-unknown": true,
   "value-list-comma-newline-after": "always-multi-line",
   "value-list-comma-space-after": "always-single-line",
   "value-list-comma-space-before": "never"
