--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "matchdep": "~1.0.1",
     "postcss-reporter": "~1.3.3",
     "postcss-scss": "~0.1.7",
-    "stylelint": "~5.3.0"
+    "stylelint": "^6.4.2"
   },
   "engines": {
     "node": ">=4.2.1"
