Use `length-zero-no-unit` over `number-zero-length-no-unit` in `.stylelintrc`.
Deprecated in 7.0 of stylelint.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -57,7 +57,7 @@
   "no-missing-eof-newline": true,
   "number-leading-zero": "always",
   "number-no-trailing-zeros": true,
-  "number-zero-length-no-unit": true,
+  "length-zero-no-unit": true,
   "property-case": "lower",
   "rule-nested-empty-line-before": [ "always", {
     ignore: ["after-comment"],
