--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ env:
 # Build matrix options
 matrix:
   include:
+    - php: 7.1
+      env: WP_VERSION=master
     - php: nightly
       env: WP_VERSION=master
     - php: hhvm
@@ -42,6 +44,7 @@ matrix:
     - php: 7.0
       env: WP_VERSION=4.0
   allow_failures:
+    - php: 7.1
     - php: nightly
     - php: hhvm
 #  fast_finish: true
