Build Tools: Update stylelint to v7.2.0 and bump `.stylelintrc` to `stylelint-config-wordpress` v9.0.0

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,6 +6,7 @@
   } ],
   "at-rule-name-case": "lower",
   "at-rule-name-space-after": "always-single-line",
+  "at-rule-no-unknown": true,
   "at-rule-semicolon-newline-after": "always",
   "block-closing-brace-newline-after": "always",
   "block-closing-brace-newline-before": "always",
@@ -31,6 +32,7 @@
   "declaration-colon-space-after": "always-single-line",
   "declaration-colon-space-before": "never",
   "font-family-name-quotes": "always-where-recommended",
+  "font-weight-notation": "numeric",
   "function-calc-no-unspaced-operator": true,
   "function-comma-space-after": "always",
   "function-comma-space-before": "never",
@@ -42,7 +44,11 @@
   "function-whitespace-after": "always",
   "indentation": "tab",
   "keyframe-declaration-no-important": true,
+  "length-zero-no-unit": true,
   "max-empty-lines": 2,
+  "max-line-length": [ 80, {
+    "ignore": "non-comments",
+  } ],
   "media-feature-colon-space-after": "always",
   "media-feature-colon-space-before": "never",
   "media-feature-no-missing-punctuation": true,
@@ -54,11 +60,11 @@
   "no-eol-whitespace": true,
   "no-extra-semicolons": true,
   "no-invalid-double-slash-comments": true,
-  "no-missing-eof-newline": true,
+  "no-missing-end-of-source-newline": true,
   "number-leading-zero": "always",
   "number-no-trailing-zeros": true,
-  "length-zero-no-unit": true,
   "property-case": "lower",
+  "property-no-unknown": true,
   "rule-nested-empty-line-before": [ "always", {
     ignore: ["after-comment"],
   } ],
@@ -68,6 +74,19 @@
   "selector-attribute-brackets-space-inside": "never",
   "selector-attribute-operator-space-after": "never",
   "selector-attribute-operator-space-before": "never",
+  "selector-attribute-quotes": "always",
+  "selector-class-pattern": [
+    "^[a-z]+(-[a-z]+)*",
+    {
+    "message": "Selector should use lowercase and separate words with hyphens (selector-class-pattern)",
+    },
+  ],
+  "selector-id-pattern": [
+    "^[a-z]+(-[a-z]+)*",
+    {
+    "message": "Selector should use lowercase and separate words with hyphens (selector-id-pattern)",
+    },
+  ],
   "selector-combinator-space-after": "always",
   "selector-combinator-space-before": "always",
   "selector-list-comma-newline-after": "always",
@@ -86,6 +105,7 @@
   "string-quotes": "double",
   "unit-case": "lower",
   "unit-no-unknown": true,
+  "value-keyword-case": "lower",
   "value-list-comma-newline-after": "always-multi-line",
   "value-list-comma-space-after": "always-single-line",
   "value-list-comma-space-before": "never"
