--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "grunt-postcss": "~0.8.0",
     "grunt-rtlcss": "~2.0.1",
     "grunt-sass": "~1.2.0",
+    "grunt-stylelint": "^0.6.0",
     "grunt-wp-i18n": "~0.5.2",
     "matchdep": "~1.0.1",
-    "postcss-reporter": "~1.3.3",
-    "postcss-scss": "~0.1.7",
+    "postcss-scss": "~0.3.0",
     "stylelint": "^7.2.0"
   },
   "engines": {
