--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,20 @@ matrix:
             - mysql-client-core-5.6
             - mysql-client-5.6
   exclude:
+    - php: 7.1
+      env: WP_VERSION=4.6
+    - php: 7.1
+      env: WP_VERSION=4.5
+    - php: 7.1
+      env: WP_VERSION=4.4
+    - php: 7.1
+      env: WP_VERSION=4.3
+    - php: 7.1
+      env: WP_VERSION=4.2
+    - php: 7.1
+      env: WP_VERSION=4.1
+    - php: 7.1
+      env: WP_VERSION=4.0
     - php: 7.0
       env: WP_VERSION=4.2
     - php: 7.0
