--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ sudo: false
 # Tell Travis CI we're using PHP
 language: php
 
+# Configure caches
+cache:
+  apt: true
+
 # PHP version used in first build configuration.
 php:
     - 7.1
