--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ before_script:
 # Run tests
 script:
   - grunt travis
+  - if [ "$TRAVIS_PHP_VERSION" != "5.2" ]; then grunt test:buddypress; fi
 
 notifications:
     email: false
