--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-wp-i18n": "~0.5.2",
     "matchdep": "~1.0.1",
     "postcss-scss": "~0.4.0",
-    "stylelint": "^7.2.0"
+    "stylelint": "~7.7.1"
   },
   "engines": {
     "node": ">=4.2.1"
