--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "grunt-contrib-watch": "~1.0.0",
     "grunt-exec": "~1.0.1",
     "grunt-jsvalidate": "~0.2.2",
-    "grunt-legacy-util": "^1.0.0",
+    "grunt-legacy-util": "~1.0.0",
     "grunt-patch-wordpress": "~0.4.0",
     "grunt-postcss": "~0.8.0",
     "grunt-rtlcss": "~2.0.1",
     "grunt-sass": "~2.0.0",
-    "grunt-stylelint": "^0.6.0",
+    "grunt-stylelint": "~0.6.0",
     "grunt-wp-i18n": "~0.5.2",
     "matchdep": "~1.0.1",
     "postcss-scss": "~0.4.0",
