--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ before_install:
 
 # before_script: Failures in this section will result in build status 'failed'
 before_script:
+  - stable='^[0-9\.]+$'; if [[ "$TRAVIS_PHP_VERSION" =~ $stable ]]; then phpenv config-rm xdebug.ini; fi
   - npm install
   - grunt build
 
