--- a/.travis.yml
+++ b/.travis.yml
@@ -13,19 +13,19 @@ cache:
 
 # PHP version used in first build configuration.
 php:
-    - 7.1
-    - 7.0
-    - 5.6
-    - 5.5
-    - 5.4
-    - 5.3
-    - 5.2
+  - 7.1
+  - 7.0
+  - 5.6
+  - 5.5
+  - 5.4
+  - 5.3
+  - 5.2
 
 # WordPress comes from the Git mirror, where 'master' mirrors svn 'trunk' and
 # x.y mirrors the latest from the x.y branch
 env:
-    - WP_VERSION=master
-    - WP_VERSION=4.7
+  - WP_VERSION=master
+  - WP_VERSION=4.7
 
 # Build matrix options
 matrix:
@@ -74,16 +74,30 @@ before_install:
     - cd $plugin_dir
     # setup NodeJS version using NVM
     - node --version
-    - nvm install 4
+    - nvm install 6
     - node --version
     - npm install -g grunt-cli
     - npm --version
     - phpenv versions
     - mysql --version
+    - php --version
+    - php -m
+    - phpunit --version
+    - curl --version
+    - grunt --version
+    - git --version
+    - svn --version
 
 # before_script: Failures in this section will result in build status 'failed'
 before_script:
   - stable='^[0-9\.]+$'; if [[ "$TRAVIS_PHP_VERSION" =~ $stable ]]; then phpenv config-rm xdebug.ini; fi
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  - |
+  if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
+    composer global require "phpunit/phpunit=5.7.*"
+  elif [[ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]]; then
+    composer global require "phpunit/phpunit=4.8.*"
+  fi
   - npm install
   - grunt build
 
