--- a/.travis.yml
+++ b/.travis.yml
@@ -81,6 +81,10 @@ before_install:
     - phpenv versions
     - mysql --version
     - php --version
+    - |
+      if [[ "$TRAVIS_PHP_VERSION" != 'hhvm' ]]; then
+        php -m
+      fi
     - php -m
     - phpunit --version
     - curl --version
