--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "grunt-wp-i18n": "~0.5.2",
     "matchdep": "~1.0.1",
     "postcss-scss": "~0.4.0",
-    "stylelint": "^7.10.1",
-    "stylelint-config-wordpress": "^10.0.1"
+    "stylelint": "~7.10.1",
+    "stylelint-config-wordpress": "~11.0.0"
   },
   "engines": {
     "node": ">=4.2.1"
