--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ sudo: false
 # Tell Travis CI we're using PHP
 language: php
 
+# Tell Travis CI which distro to use
+dist: trusty
+
 # Configure caches
 cache:
   apt: true
@@ -19,7 +22,9 @@ php:
   - 5.5
   - 5.4
   - 5.3
+    dist: precise
   - 5.2
+    dist: precise
 
 # WordPress comes from the Git mirror, where 'master' mirrors svn 'trunk' and
 # x.y mirrors the latest from the x.y branch
