--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,6 @@ php:
   - 5.6
   - 5.5
   - 5.4
-  - 5.3
-    dist: precise
-  - 5.2
-    dist: precise
 
 # WordPress comes from the Git mirror, where 'master' mirrors svn 'trunk' and
 # x.y mirrors the latest from the x.y branch
@@ -37,6 +33,18 @@ matrix:
   include:
     - php: nightly
       env: WP_VERSION=master
+    - php: 5.3
+      env: WP_VERSION=master
+      dist: precise
+    - php: 5.3
+      env: WP_VERSION=4.7
+      dist: precise
+    - php: 5.2
+      env: WP_VERSION=master
+      dist: precise
+    - php: 5.2
+      env: WP_VERSION=4.7
+      dist: precise
   allow_failures:
     - php: nightly
 #  fast_finish: true
@@ -106,3 +114,4 @@ notifications:
         - secure: "eRufY5taFDAuASgf9kB8oIC58lK9jLCTGVZ9Dr4M3Xxnwsj6t42Z5U9ZJ5wWAa0+9rf3UwbXj32Nd4QVvKWQL+IYTolX+LHzIidjKjYhOoCNr9HoMgjNOrjozXezKqqXzYKkPdX6drxk7JkK+ftx8qvVtZgRU8BS9sjhYDWh1X4="
       template:
         - "Build %{build_number} (%{branch} - %{commit}): %{message} %{build_url}"
+
