--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   },
   "description": "Forum software with a twist from the creators of WordPress.",
   "devDependencies": {
-    "autoprefixer": "~7.1.1",
+    "autoprefixer": "~7.1.2",
     "grunt": "~1.0.1",
     "grunt-check-dependencies": "~1.0.0",
-    "grunt-checktextdomain": "~1.0.0",
+    "grunt-checktextdomain": "~1.0.1",
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-contrib-cssmin": "~2.2.0",
@@ -18,15 +18,15 @@
     "grunt-exec": "~2.0.0",
     "grunt-jsvalidate": "~0.2.2",
     "grunt-legacy-util": "~1.0.0",
-    "grunt-patch-wordpress": "~0.4.0",
+    "grunt-patch-wordpress": "~0.4.2",
     "grunt-postcss": "~0.8.0",
     "grunt-rtlcss": "~2.0.1",
     "grunt-sass": "~2.0.0",
     "grunt-stylelint": "~0.8.0",
     "grunt-wp-i18n": "~1.0.0",
     "matchdep": "~1.0.1",
-    "postcss-scss": "^1.0.2",
-    "stylelint": "~7.10.1",
+    "postcss-scss": "~1.0.2",
+    "stylelint": "~7.13.0",
     "stylelint-config-wordpress": "~11.0.0"
   },
   "engines": {
