Build Tools: Exclude Travis CI PHP 7.2 builds for WP 4.7 & 4.8, PHP 7.2 compat will WP 4.9.

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,11 @@ matrix:
     - php: 5.2
       env: WP_VERSION=4.7
       dist: precise
+  exclude:
+    - php: 7.2
+      env: WP_VERSION=4.8
+    - php: 7.2
+      env: WP_VERSION=4.7
   allow_failures:
     - php: nightly
 #  fast_finish: true
