--- a/.travis.yml
+++ b/.travis.yml
@@ -118,9 +118,11 @@ before_script:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - |
     if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
-      composer global require "phpunit/phpunit=5.7.*"
+      echo "Using latest PHPUnit 6.x branch"
+      composer global require "phpunit/phpunit=^6"
     elif [[ ${TRAVIS_PHP_VERSION:0:3} != "5.2" ]]; then
-      composer global require "phpunit/phpunit=4.8.*"
+      echo "Using latest PHPUnit 4.x branch"
+      composer global require "phpunit/phpunit=^4"
     fi
   - npm install
   - grunt build
