Build Tools: Run Travis-CI unit tests on WordPress 4.9.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ php:
 # x.y mirrors the latest from the x.y branch
 env:
   - WP_VERSION=master
+  - WP_VERSION=4.9
   - WP_VERSION=4.8
   - WP_VERSION=4.7
 
