Build Tools: Update SPDX License in `package.json` to adhere to SPDX v3.0 specification.
See also:
• https://spdx.org/news/news/2018/01/license-list-30-released
• https://spdx.org/licenses/
• WordPress Ticket #WP43032

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "support"
   ],
   "homepage": "https://bbpress.org",
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "name": "bbpress",
   "repository": {
     "type": "svn",
