--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	},
 	"description": "Forum software with a twist from the creators of WordPress.",
 	"devDependencies": {
+		"@wordpress/browserslist-config": "~2.1.3",
 		"autoprefixer": "~8.2.0",
 		"grunt": "~1.0.1",
 		"grunt-check-dependencies": "~1.0.0",
@@ -47,5 +48,8 @@
 		"type": "svn",
 		"url": "https://bbpress.svn.wordpress.org/trunk"
 	},
-	"version": "2.6.0"
+	"version": "2.6.0",
+	"browserslist": [
+		"extends @wordpress/browserslist-config"
+	]
 }
