--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"devDependencies": {
 		"@wordpress/browserslist-config": "~2.1.3",
 		"autoprefixer": "~8.2.0",
-		"grunt": "~1.0.1",
+		"grunt": "^1.0.3",
 		"grunt-check-dependencies": "~1.0.0",
 		"grunt-checktextdomain": "~1.0.1",
 		"grunt-contrib-clean": "~1.1.0",
@@ -15,14 +15,14 @@
 		"grunt-contrib-cssmin": "~2.2.0",
 		"grunt-contrib-jshint": "~1.1.0",
 		"grunt-contrib-uglify": "~3.0.1",
-		"grunt-contrib-watch": "~1.0.0",
+		"grunt-contrib-watch": "^1.1.0",
 		"grunt-exec": "~2.0.0",
 		"grunt-jsvalidate": "~0.2.2",
-		"grunt-legacy-util": "~1.0.0",
-		"grunt-patch-wordpress": "~0.4.2",
+		"grunt-legacy-util": "^1.1.1",
+		"grunt-patch-wordpress": "^1.0.0",
 		"grunt-postcss": "~0.8.0",
 		"grunt-rtlcss": "~2.0.1",
-		"grunt-sass": "~2.0.0",
+		"grunt-sass": "^3.0.0",
 		"grunt-stylelint": "~0.8.0",
 		"grunt-wp-i18n": "~1.0.0",
 		"matchdep": "~1.0.1",
@@ -51,5 +51,8 @@
 	"version": "2.6.0",
 	"browserslist": [
 		"extends @wordpress/browserslist-config"
-	]
+	],
+	"dependencies": {
+		"node-sass": "^4.9.1"
+	}
 }
