--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"type": "svn",
 		"url": "https://bbpress.svn.wordpress.org/trunk"
 	},
-	"version": "2.6.0",
+	"version": "2.7.0-alpha-1",
 	"browserslist": [
 		"extends @wordpress/browserslist-config"
 	]
