--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,17 +16,17 @@
 			<group>buddypress</group>
 		</exclude>
 	</groups>
-	<listeners>
-		<listener class="SpeedTrapListener" file="tests/phpunit/includes/speed-trap-listener.php">
-			<arguments>
-				<array>
-					<element key="slowThreshold">
-						<integer>500</integer>
-					</element>
-				</array>
-			</arguments>
-		</listener>
-	</listeners>
+	<!-- <listeners>-->
+		<!-- <listener class="SpeedTrapListener" file="tests/phpunit/includes/speed-trap-listener.php">-->
+			<!-- <arguments>-->
+				<!-- <array>-->
+					<!-- <element key="slowThreshold">-->
+						<!-- <integer>500</integer>-->
+					<!-- </element>-->
+				<!-- </array>-->
+			<!-- </arguments>-->
+		<!-- </listener>-->
+	<!-- </listeners>-->
 	<filter>
 		<whitelist processUncoveredFilesFromWhitelist="true">
 			<directory suffix=".php">src</directory>
