Build Tools: Cache `node_modules` folder in Travis CI
Fixes #2885.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ cache:
   directories:
   - vendor
   - $HOME/.composer/cache
+  - node_modules
 
 # PHP version used in first build configuration.
 php:
