--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"stylelint-config-wordpress": "~15.0.0"
 	},
 	"engines": {
-		"node": ">=6.9.1"
+		"node": ">=12.0.0",
+		"npm": ">=6.9.0"
 	},
 	"keywords": [
 		"community",
