--- a/.jshintrc
+++ b/.jshintrc
@@ -1,17 +1,16 @@
 {
 	"boss": true,
+	"browser": true,
 	"curly": true,
+	"esversion": "6",
 	"eqeqeq": true,
 	"eqnull": true,
-	"es3": true,
 	"expr": true,
 	"immed": true,
 	"noarg": true,
 	"quotmark": "single",
 	"undef": false,
 	"unused": true,
-
-	"browser": true,
 
 	"globals": {
 		"_": false,
