--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "2.7.0-alpha-1",
 	"author": "The bbPress Contributors",
 	"description": "Forum software with a twist from the creators of WordPress.",
-	"version": "2.7.0-alpha-1",
 	"homepage": "https://bbpress.org",
 	"license": "GPL-2.0-or-later",
 	"keywords": [
@@ -30,8 +29,10 @@
 	],
 	"devDependencies": {
 		"@wordpress/browserslist-config": "~2.1.3",
+		"@wordpress/stylelint-config": "~22.4.0",
 		"autoprefixer": "~8.2.0",
-		"grunt": "~1.4.1",
+		"browserslist": "~4.23.2",
+		"grunt": "~1.6.1",
 		"grunt-check-dependencies": "~1.0.0",
 		"grunt-checktextdomain": "~1.0.1",
 		"grunt-contrib-clean": "~1.1.0",
@@ -48,11 +49,15 @@
 		"grunt-rtlcss": "~2.0.2",
 		"grunt-sass": "~3.1.0",
 		"grunt-stylelint": "~0.8.0",
+		"grunt-terser": "~2.0.0",
 		"grunt-wp-i18n": "~1.0.3",
 		"matchdep": "~2.0.0",
-		"node-sass": "~4.14.1",
+		"node-sass": "~9.0.0",
+		"postcss": "~8.4.40",
+		"postcss-markdown": "~1.2.0",
 		"postcss-scss": "~1.0.2",
-		"stylelint": "~13.6.1",
-		"stylelint-config-wordpress": "~15.0.0"
+		"stylelint": "~15.11.0",
+		"stylelint-scss": "~6.4.1",
+		"terser": "~5.31.3"
 	}
 }
