--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Check if GitHub Repository Has Been Synced from SVN Before
         id: check_repo
         run: |
-          if git log --grep="git-svn-id" -1 --format="%H" >/dev/null 2>&1; then
+          if git branch -r | grep -q "origin/trunk"; then
             echo "SVN_SYNCED=true" >> $GITHUB_ENV
           else
             echo "SVN_SYNCED=false" >> $GITHUB_ENV
