--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           fetch-depth: 1
 
       - name: Install Dependencies
-        run: sudo apt-get install -y subversion jq curl
+        run: sudo apt-get install -y git git-svn subversion jq curl
 
       - name: Check if GitHub Repository Has Been Synced from SVN Before
         id: check_repo
