--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,15 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Install Dependencies
-        run: sudo apt-get install -y git git-svn subversion jq curl
+      - name: Install Compatible Git and Git-SVN
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository -y ppa:git-core/ppa
+          sudo apt-get update
+          sudo apt-get install -y git=1:2.42.0-1ubuntu1
+          sudo apt-mark hold git
+          sudo apt-get install -y git-svn subversion jq curl
 
       - name: Check if GitHub Repository Has Been Synced from SVN Before
         id: check_repo
