--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,16 @@ jobs:
           sudo cpanm --notest SVN::Core
           sudo cpanm --notest Git::SVN
 
+          # Ensure git-svn is in the system path
+          GIT_SVN_PATH=$(find / -name git-svn -type f 2>/dev/null | head -n 1)
+          if [ -n "$GIT_SVN_PATH" ]; then
+            sudo ln -sf "$GIT_SVN_PATH" /usr/local/bin/git-svn
+            echo "git-svn found and linked: $GIT_SVN_PATH"
+          else
+            echo "ERROR: git-svn was installed but not found in system path!"
+            exit 1
+          fi
+
       - name: Check if GitHub Repository Has Been Synced from SVN Before
         id: check_repo
         run: |
